--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,15 @@
+:root {
+  color: white;
+}
+body {
+  background-color: black;
+}
 #wrapper {
   width: 1199px;
   margin-right: auto;
   margin-left: auto;
   border: thin solid;
+  font-family: Rockwell;
 }
 
 nav {
@@ -11,12 +18,23 @@ nav {
   float: left;
   text-align: center;
 }
-
+nav a {
+  display: block;
+  margin: 1em auto;
+  padding: 1em;
+  background-color: orange;
+  border: 4px solid darkgrey;
+}
+nav a:hover {
+  background-color: darkgrey;
+  border: 4px solid orange;
+  transition: 0.5s;
+}
 article {
   width: 998px;
   min-height: 850px;
   float: right;
-  border-left: 1px solid black;
+  border-left: 1px solid white;
 }
 
 .clear {
