--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,7 @@ nav {
   float: left;
   text-align: center;
   background-image: url(images/nav-bg.jpeg);
+  background-size: cover;
 }
 nav a {
   display: block;
@@ -38,10 +39,10 @@ nav a:hover {
   color: white !important;
 }
 .active {
-  background-color: yellow;
+  background-color: peachpuff;
 }
 .active:hover {
-  border: 4px solid yellow;
+  border: 4px solid peachpuff;
 }
 article {
   width: 998px;
@@ -51,7 +52,7 @@ article {
 }
 h1 {
   text-align: center;
-  color: yellow;
+  color: peachpuff;
   font-family: Rockwell;
 }
 hr {
@@ -72,7 +73,7 @@ p a {
   color: orange;
 }
 p a:hover {
-  color: yellow;
+  color: peachpuff;
 }
 .clear {
   clear: both;
