--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,9 +57,8 @@ h1 {
 }
 hr {
   width: 50%;
-  height: 1px;
-  background-color: orange;
   margin-bottom: 3em;
+  border-bottom: 1px solid orange;
 }
 p {
   margin-left: 4em;
@@ -75,6 +74,7 @@ p a {
 p a:hover {
   color: peachpuff;
 }
+/*index.html*/
 .home-img-container {
   text-align: center;
 }
@@ -85,4 +85,22 @@ p a:hover {
 }
 .clear {
   clear: both;
+}
+/*a4.html*/
+.bold {
+  font-weight: bold;
+}
+.italic {
+  font-style: italic;
+}
+.spacing {
+  letter-spacing: 3px;
+}
+.left {
+  float: left;
+  margin: 1em;
+}
+.right {
+  float: right;
+  margin: 1em;
 }
