--- a/stylesheet.css
+++ b/stylesheet.css
@@ -151,6 +151,7 @@ li a:visited {
 }
 li a:hover {
   color: white;
+  text-decoration: none;
 }
 ol {
   font-family: Arial, Helvetica, sans-serif;
