--- a/stylesheet.css
+++ b/stylesheet.css
@@ -180,4 +180,36 @@ ol li::first-letter {
 /*---------a6.html-----------*/
 form {
   display: inline-block;
+  color: orange;
+  font-family: Arial, Helvetica, sans-serif;
+}
+legend {
+  color: paleturquoise;
+}
+#fieldsetOne input,
+#fieldsetThree input,
+#fieldsetThree select,
+#fieldsetThree textarea {
+  margin: 0.5em;
+}
+label {
+  color: peachpuff;
+}
+input[type="submit"],
+input[type="reset"] {
+  margin-top: 1em;
+  padding: 5px;
+  color: black;
+  background-color: peachpuff;
+  border: 2px solid darkgray;
+  border-radius: 5px;
+  transition: 1s;
+}
+input[type="submit"]:hover,
+input[type="reset"]:hover {
+  color: black;
+  background-color: paleturquoise;
+  border: 2px solid darkgray;
+  transition: 1s;
+  cursor: pointer;
 }
